cleanup & fix anonymous check